# OctavianGaming

./: CMakeLists.txt  README.md
src/: main.cpp
src/Button/: Button.cpp  Button.h  StartButton.cpp  StartButton.h  StopButton.cpp  StopButton.h
src/Game/: Game.cpp  Game.h
src/InputHandler/: InputHandler.cpp  InputHandler.h
src/Render/: Render.cpp  Render.h
src/SlotMachine/: Reel.cpp  Reel.h  SlotMachine.cpp  SlotMachine.h  Symbol.cpp  Symbol.h
src/StateMachine/: IObserver.h  ISubject.h  IdleState.cpp  IdleState.h  ResultState.cpp  ResultState.h  SpinningState.cpp  SpinningState.h  State.h  StateMachine.cpp  StateMachine.h
src/TextureManager/: TextureManager.cpp  TextureManager.h
